@startuml

class BookingController{

}

class BookingService{

}

class ExternalController{
- BookingErrorHandler
+ makeAPICall()
}

interface ExternalErrorHandler{
- response
- returnAPIErrorResponse()
}

class BookingErrorHandler{
- returnAPIErrorResponse()
- response
}
note "This can be any implementation of ExternalErrorHandler; In this case Booking.com" as N1

BookingErrorHandler -- N1
BookingController "1" --> "1" BookingService
BookingService "1" --> "1" ExternalController

ExternalController "1" --> "1" BookingErrorHandler
BookingErrorHandler ..|> ExternalErrorHandler

note "could be any service, Booking is just an example" as N2
BookingService -- N2
note "could be any controller, Booking is just an example" as N3
BookingController -- N3

@enduml